# finmas

./: .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
components/: index.html
components/crews/: index.html
components/embedding_models/: index.html
components/llm_models/: index.html
components/query_engine/: index.html
configuration/: index.html
crews/: index.html
crews/combined/: index.html
crews/market_data/: index.html
crews/news/: index.html
crews/sec/: index.html
data/: index.html
data/fundamentals/: index.html
data/news/: index.html
data/sec/: index.html
data/sec/parsing/: index.html
development/: index.html
docs/: configuration.md  development.md  examples  examples_index.md  index.md  requirements.txt
docs/components/: crews.md  embedding_models.md  index.md  llm_models.md  packages.md  query_engine.md
docs/crews/: combined.md  index.md  market_data.md  news.md  sec.md
docs/data/: fundamentals.md  index.md  news.md
docs/data/sec/: index.md  parsing.md
docs/include/diagrams/: crew_structure.mmd  finmas_architecture_app.mmd
docs/include/diagrams/crews/: combined.mmd  market_data.mmd  news.mmd  sec.mmd
docs/include/diagrams/tools/: news.mmd
docs/styles/: extra.css
docs/tutorial/: index.md  news.md
examples/combined/APP_gpt-4o_2025-01-21/: index.html
examples/combined/NVDA_gpt-4o-mini_2024-11-18/: index.html
examples/combined/NVDA_gpt-4o_2024-11-18/: index.html
examples/market_data/META_gpt-4o-mini_2024-11-18/: index.html
examples/market_data/META_gpt-4o_2024-11-18/: index.html
examples/market_data/META_llama3-8b_2024-11-18/: index.html
examples/news/NVDA_gpt-4o-mini_2024-11-18/: index.html
examples/news/NVDA_llama3-8b_2024-11-18/: index.html
examples/news/TSLA_gpt-4o-mini_2024-11-18/: index.html
examples/news/TSLA_llama3-8b_2024-11-18/: index.html
examples/sec_mda_risk_factors/META_gpt-4o_2024-11-18/: index.html
examples/sec_mda_risk_factors/NVDA_gpt-4o_2024-11-18/: index.html
examples/sec_mda_risk_factors/NVDA_llama3-8b_2024-11-18/: index.html
examples_index/: index.html
include/diagrams/: finmas_architecture.mmd
include/diagrams/tools/: sec.mmd
notebooks/: combined_analysis.ipynb  market_data_analysis.ipynb  news_analysis.ipynb  sec_filing_analysis.ipynb
output/examples/combined/: APP_gpt-4o_2025-01-21.md  NVDA_gpt-4o-mini_2024-11-18.md  NVDA_gpt-4o_2024-11-18.md
output/examples/market_data/: META_gpt-4o-mini_2024-11-18.md  META_gpt-4o_2024-11-18.md  META_llama3-8b_2024-11-18.md
output/examples/news/: NVDA_gpt-4o-mini_2024-11-18.md  NVDA_llama3-8b_2024-11-18.md  TSLA_gpt-4o-mini_2024-11-18.md  TSLA_llama3-8b_2024-11-18.md
output/examples/sec_mda_risk_factors/: META_gpt-4o_2024-11-18.md  NVDA_gpt-4o_2024-11-18.md  NVDA_llama3-8b_2024-11-18.md
search/: search_index.json
src/finmas/: cache_config.py  constants.py  logger.py
src/finmas/cli/: main.py
src/finmas/crews/: __init__.py  model_provider.py  utils.py
src/finmas/crews/combined/: crew.py
src/finmas/crews/market_data/: crew.py
src/finmas/crews/news/: crew.py
src/finmas/crews/sec/: crew.py
src/finmas/crews/sec_mda_risk_factors/: crew.py
src/finmas/data/: __init__.py  token_counting.py
src/finmas/panel/: about.md  app.py  formatting.py  plotting.py  query.md
src/finmas/utils/: common.py
tutorial/: index.html
tutorial/news/: index.html
(+24 files in other folders)
